FIXED #167. >>>Misalignment in ticket description portion if the content is having some inline styles.

--- a/public/src/_mixins.scss
+++ b/public/src/_mixins.scss
@@ -88,7 +88,11 @@
       font-style: normal;
       margin:0;
    }                          
-   code, pre, p, li{ @include force-wrap; }              
+   code, pre, p, li,span { 
+      @include force-wrap; 
+      white-space:pre-line !important;
+      white-space:pre-wrap !important;
+   }              
    h1 {font-size: 2em}
    h2 {font-size: 1.5em}
    h3 {font-size: 1.17em}
