--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -67,7 +67,7 @@ ul.activityfeed li div.preview_pic img { width: 40px; height: 40px; }
 .left_connected { position: relative; left: 3px; border-right: 0px; margin: 12px 0px; }
 
 .ui-list_with_icon { margin-left: 0; padding-top: 5px; list-style: none; margin: 0px; padding: 0px; }
-.ui-list_with_icon li { padding-left: 14px; background: url('/images/symbols/request_nav_seperator.gif?1318328674') no-repeat 3px 9px; list-style-type: none; }
+.ui-list_with_icon li { padding-left: 14px; background: url('/images/symbols/request_nav_seperator.gif?1337253545') no-repeat 3px 9px; list-style-type: none; }
 .ui-list_with_icon li { padding: 4px 0px 4px 18px; color: #41658a; position: relative; }
 .ui-list_with_icon li img { position: absolute; left: 0px; top: 4px; }
 .ui-list_with_icon li a { color: #527eaa; font-size: 1.0em; line-height: 1.5; text-decoration: none; }
@@ -234,7 +234,7 @@ h4.title { font-size: 1.1em; font-weight: bold; }
 .request_details div.description { position: relative; }
 .request_details div.description .details { font-size: 13px; line-height: 18px; }
 .request_details div.description .details p, .request_details div.description .details li, .request_details div.description .details div { font-size: 13px; line-height: 18px; font-style: normal; margin: 0; }
-.request_details div.description .details code, .request_details div.description .details pre, .request_details div.description .details p, .request_details div.description .details li { white-space: pre; white-space: pre-wrap; white-space: pre-line; white-space: -pre-wrap; white-space: -o-pre-wrap; white-space: -moz-pre-wrap; white-space: -hp-pre-wrap; word-wrap: break-word; }
+.request_details div.description .details code, .request_details div.description .details pre, .request_details div.description .details p, .request_details div.description .details li, .request_details div.description .details span { white-space: pre; white-space: pre-wrap; white-space: pre-line; white-space: -pre-wrap; white-space: -o-pre-wrap; white-space: -moz-pre-wrap; white-space: -hp-pre-wrap; word-wrap: break-word; white-space: pre-line !important; white-space: pre-wrap !important; }
 .request_details div.description .details h1 { font-size: 2em; }
 .request_details div.description .details h2 { font-size: 1.5em; }
 .request_details div.description .details h3 { font-size: 1.17em; }
@@ -666,7 +666,7 @@ h4.border_title { font-size: 16px; border-bottom: 1px solid #ebebeb; padding-bot
 .solution-list .odd a:hover, .solution-list .even a:hover { color: #3399cc; }
 .solution-list .odd a:active, .solution-list .even a:active { color: #4d769f; }
 .solution-list .odd ul, .solution-list .even ul { margin-left: 0; }
-.solution-list .odd ul li, .solution-list .even ul li { padding-left: 14px; background: url('/images/symbols/request_nav_seperator.gif?1318328674') no-repeat -0.5px 5px; list-style-type: none; }
+.solution-list .odd ul li, .solution-list .even ul li { padding-left: 14px; background: url('/images/symbols/request_nav_seperator.gif?1337253545') no-repeat -0.5px 5px; list-style-type: none; }
 .solution-list .odd li, .solution-list .even li { line-height: 22px; padding: 0px 0px 4px 18px; color: black; }
 .solution-list .odd li a, .solution-list .even li a { font-size: 13px; color: #21759b; }
 .solution-list .odd li a:visited, .solution-list .even li a:visited { color: #21759b; }
@@ -991,7 +991,7 @@ div.addReminder form label.overlabel { margin: 2px 5px 4px 10px; padding: 0px; f
 
 .solutions_text { padding-top: 8px; }
 .solutions_text p, .solutions_text li, .solutions_text div { font-size: 13px; line-height: 18px; font-style: normal; margin: 0; }
-.solutions_text code, .solutions_text pre, .solutions_text p, .solutions_text li { white-space: pre; white-space: pre-wrap; white-space: pre-line; white-space: -pre-wrap; white-space: -o-pre-wrap; white-space: -moz-pre-wrap; white-space: -hp-pre-wrap; word-wrap: break-word; }
+.solutions_text code, .solutions_text pre, .solutions_text p, .solutions_text li, .solutions_text span { white-space: pre; white-space: pre-wrap; white-space: pre-line; white-space: -pre-wrap; white-space: -o-pre-wrap; white-space: -moz-pre-wrap; white-space: -hp-pre-wrap; word-wrap: break-word; white-space: pre-line !important; white-space: pre-wrap !important; }
 .solutions_text h1 { font-size: 2em; }
 .solutions_text h2 { font-size: 1.5em; }
 .solutions_text h3 { font-size: 1.17em; }
